--- a/src/posts/fresh-paint.mdx
+++ b/src/posts/fresh-paint.mdx
@@ -14,17 +14,21 @@ import { getImage, GatsbyImage } from 'gatsby-plugin-image'
   image={getImage(props.frontmatter.postImages[0])}
   className="mr-4 is-pulled-left"
 />
+
 It feels like I change blogging platforms more often than I actually write blog posts...but
 rather than just a desire to apply a fresh coat of paint this time my rebuild had
 purpose. I had three main goals in mind...
 
-**1. Reducing my hosting costs**  
+#### 1. Reducing my hosting costs
+
 Considering I seldom post or get much traffic to my website and I burnt through my free AWS credits sometime back paying for an EC2 instance on a monthly basis seemed a stupid waste of money.
 
-**2. Apply Learning**  
+#### 2. Apply Learning
+
 I'd been tinkering with a few static site generators and JAM stack projects in my downtime. I wanted a real world thing to build rather than a fictional site for my dog (which I have made already) as this would likely be more rewarding.
 
-**3. Take climate action**  
+#### 3. Take climate action
+
 I'd been doing a little research at work about product design and technology choices in relation to climate action. I wanted to take actual steps (however small, tiny or tokenistic those may seem to be) to move to hosting being powered by renewables (or at least suitably offset) and also explore using page budgets and PWA to reduce compute/storage and data transfer.
 
 **I'm happy to report I've accomplished all three of the goals above.** In addition, I think this might be the best user experience of all of the iterations of my blog/website in quite some time and equally I think i've ended up with a solution which actually works better for me as an author/publisher. Winning!
