--- a/src/posts/fresh-paint.mdx
+++ b/src/posts/fresh-paint.mdx
@@ -9,11 +9,14 @@ postImages:
 
 import { getImage, GatsbyImage } from 'gatsby-plugin-image'
 
-<GatsbyImage
-  alt="lots of colourful spray cans"
-  image={getImage(props.frontmatter.postImages[0])}
-  className="mr-4 is-pulled-left"
-/>
+<div className="medium-post-image">
+  <GatsbyImage
+    alt="lots of colourful spray cans"
+    title="all the colours of fresh paint"
+    image={getImage(props.frontmatter.postImages[0])}
+    className="ml-4 is-pulled-right"
+  />
+</div>
 
 It feels like I change blogging platforms more often than I actually write blog posts...but
 rather than just a desire to apply a fresh coat of paint this time my rebuild had
