adding socialImage to frontmatter

--- a/src/posts/6-month-reflection.mdx
+++ b/src/posts/6-month-reflection.mdx
@@ -3,6 +3,7 @@ title: 6 Month Reflection
 date: 2017-05-30
 description: 'A post spent refelcting on the last 6 months. How the work/life balance is going, my aspirations etc.'
 tags: ['reflection', 'balance', 'work']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/cute-dog.jpg'
 ---
