--- a/src/posts/choropleth-experiments.mdx
+++ b/src/posts/choropleth-experiments.mdx
@@ -3,6 +3,7 @@ title: Choropleth Experiments
 date: 2019-04-25
 description: "One man's experiments in data, maps and the world wide web."
 tags: ['data', 'maps', 'tech', 'code', 'experiments']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/map-experiment.jpg'
 ---
