--- a/src/posts/homesick.mdx
+++ b/src/posts/homesick.mdx
@@ -2,6 +2,7 @@
 title: Homesick
 date: 2018-11-25
 tags: ['life', 'homesick', 'reflection']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/one-man-island.jpg'
 ---
