--- a/src/posts/tinkering-monday.mdx
+++ b/src/posts/tinkering-monday.mdx
@@ -3,6 +3,7 @@ title: Tinkering Monday
 date: 2019-03-25
 description: 'A post about my some website experiments - from ghost blogging throught to static site generators and all the things in between'
 tags: ['tech', 'experiment', 'website']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/robot-unsplash.jpg'
 ---
