--- a/src/posts/wk1-be-more-like-robbie.mdx
+++ b/src/posts/wk1-be-more-like-robbie.mdx
@@ -2,6 +2,7 @@
 title: Week1 - Be more like Robbie
 date: 2019-03-15
 tags: ['weeknotes']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/cute-dog.jpg'
 ---
