--- a/src/posts/wk2-how-high.mdx
+++ b/src/posts/wk2-how-high.mdx
@@ -2,6 +2,7 @@
 title: Week2 - How High
 date: 2019-03-29
 tags: ['weeknotes']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/high-fives.jpg'
 ---
