--- a/src/posts/wk4-333-slides.mdx
+++ b/src/posts/wk4-333-slides.mdx
@@ -2,6 +2,7 @@
 title: Week4 - 333 Slides
 date: 2019-04-12
 tags: ['weeknotes']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/cute-dog.jpg'
 ---
