--- a/src/posts/wk5-late-notes.mdx
+++ b/src/posts/wk5-late-notes.mdx
@@ -2,6 +2,7 @@
 title: Week5 - Late Notes
 date: 2019-05-01
 tags: ['weeknotes']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/cute-dog.jpg'
 ---
