--- a/src/posts/wk6-range.mdx
+++ b/src/posts/wk6-range.mdx
@@ -2,6 +2,7 @@
 title: Week6 - Range
 date: 2020-02-21
 tags: ['weeknotes', 'rarenotes']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/hackney_animal.jpg'
 ---
