--- a/src/posts/lets-keep-talking-about-this.mdx
+++ b/src/posts/lets-keep-talking-about-this.mdx
@@ -2,6 +2,7 @@
 title: Let's keep talking about this
 date: 2019-10-15
 tags: ['BLAW', 'babyloss', 'reflection', 'breakthesilence']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/morganbethany.jpg'
 ---
