--- a/src/posts/wk3-dear-diary.mdx
+++ b/src/posts/wk3-dear-diary.mdx
@@ -2,6 +2,7 @@
 title: Week3 - Dear Diary
 date: 2019-04-06
 tags: ['weeknotes']
+socialImage: '../images/social-image.jpg'
 postImages:
   - '../images/post-images/cute-dog.jpg'
 ---
