adding some test images for graph

--- a/src/posts/fresh-paint.mdx
+++ b/src/posts/fresh-paint.mdx
@@ -3,7 +3,7 @@ title: Fresh paint
 date: 2020-01-28
 description: 'a post explaining my foray into re-building my blog and my desire to both reduce my hosting costs, save the planet and play with the JAM stack'
 tags: ['data', 'tech', 'experiments', 'climate']
-socialImage: '../images/social-image.jpg'
+socialImage: '../images/post-images/social/spraycans_social.jpg'
 postImages:
   - '../images/post-images/spraycans.jpg'
 ---
