--- a/src/posts/homesick.mdx
+++ b/src/posts/homesick.mdx
@@ -2,7 +2,7 @@
 title: Homesick
 date: 2018-11-25
 tags: ['life', 'homesick', 'reflection']
-socialImage: '../images/social-image.jpg'
+socialImage: '../images/post-images/social/one-man-island_social.jpg'
 postImages:
   - '../images/post-images/one-man-island.jpg'
 ---
