--- a/src/posts/what-makes-a-great-retrospective.mdx
+++ b/src/posts/what-makes-a-great-retrospective.mdx
@@ -3,7 +3,7 @@ title: What Makes a Great Retrospective
 date: 2017-12-04
 description: 'Some basic advice from me on how to run a great agile retrospective as part of any project'
 tags: ['agile', 'delivery', 'teams', 'change']
-socialImage: '../images/social-image.jpg'
+socialImage: '../images/post-images/social/avengers-assemble_social.jpg'
 postImages:
   - '../images/post-images/avengers-assemble.jpg'
 ---
