--- a/src/posts/lets-keep-talking-about-this.mdx
+++ b/src/posts/lets-keep-talking-about-this.mdx
@@ -2,7 +2,7 @@
 title: Let's keep talking about this
 date: 2019-10-15
 tags: ['BLAW', 'babyloss', 'reflection', 'breakthesilence']
-socialImage: '../images/post-images/social/morganbethany_social.jpg'
+socialImage: '../images/post-images/social/morganbethany_social.png'
 postImages:
   - '../images/post-images/morganbethany.jpg'
 ---
