sorting gifs out in mdx

--- a/src/posts/wk1-be-more-like-robbie.mdx
+++ b/src/posts/wk1-be-more-like-robbie.mdx
@@ -7,16 +7,11 @@ postImages:
   - '../images/post-images/cute-dog.jpg'
 ---
 
-<iframe
-  width="480"
-  height="269"
-  frameborder="0"
-  allowfullscreen
-  scrolling="no"
-  allowtransparency
-  src="https://giphy.com/embed/XIqCQx02E1U9W"
-  className="ml-4 mb-2 is-pulled-right"
-></iframe>
+<img
+  src="../images/post-images/kermit.gif"
+  className="medium-post-image mb-3 ml-3 is-pulled-right"
+  title="kermit types fast"
+/>
 
 I’ve tried to write [weeknotes](https://weeknot.es/) on multiple occasions and failed. They always end up in the bin. I find writing hard and I find committing my own opinions and thoughts down is often followed by much self-doubt and anxiety that people will judge me as stupid, incompetent or arrogant. I always enjoy dipping into the weeknotes of others though and get lots from them (far too many people to list). I’ve always believed there is value in reflecting, sharing and being open. Reflection is **not** something I struggle with and it’s odd that in conversation I am prone to often over-sharing and extreme transparency (sorry colleagues!) but in written form I often can’t find my voice.
 
@@ -36,18 +31,13 @@ As [FutureGov grows to increase our impact](https://www.wearefuturegov.com/impac
 
 This weeks assignment had me visualising data to tell a story around some Fire Service data we’d analysed in the previous week. Both my analysis, story and data viz skills will obviously need more practice but you can [check out my efforts here](https://d1sc0.github.io/odi_assignment3/) if you’re interested. I’ve definitely learnt heaps in the last 4 weeks and looking forward to the last few. The assignment also gave me a nice excuse to put together ‘a thing’ and was the first time I’d fired up Cloud9 and made any GitHub commits in months. I found [Tableau Public](https://public.tableau.com/en-us/s/) a little frustrating to get to grips with but following a few colourful words I wrestled it to a point where it was doing much of what I wanted. I’m adding exploration of some other tools into my backlog.
 
-<iframe
-  width="480"
-  height="368"
-  frameborder="0"
-  allowfullscreen
-  scrolling="no"
-  allowtransparency
-  src="https://giphy.com/embed/QQKhpfeRQqz6M"
-  className="ml-4 mb-2 is-pulled-right"
-></iframe>
-
 ## Things I’m learning
+
+<img
+  src="../images/post-images/data.gif"
+  className="small-post-image mb-3 ml-3 is-pulled-right"
+  title="multi-tasking"
+/>
 
 **Health…** Taking baby steps to get back to better health is paying off. It’ll take me longer but is more likely achievable given my split location living. This week I’ve not smoked and I’ve eaten sensible meals at sensible times. More breakfast meetings FTW!! (Thanks [Adam](https://twitter.com/adamwalther) and [Emily](https://twitter.com/emilytulloh))
 
