--- a/src/posts/wk2-how-high.mdx
+++ b/src/posts/wk2-how-high.mdx
@@ -7,7 +7,7 @@ postImages:
   - '../images/post-images/high-fives.jpg'
 ---
 
-import { getImage, GatsbyImage } from 'gatsby-plugin-image'
+import { getImage, getSrc, GatsbyImage } from 'gatsby-plugin-image'
 
 _I'm back for a second week. Yay! but [no longer on Medium](http://words.lostinthe.uk/tinkering-monday/). It potentially limits my audience but I'm not writing for fame and fortune so that's ok._
 
@@ -47,16 +47,11 @@ I like to think there is plenty above I already bring into my work practice but 
 
 **New projects and teams...** I've been in a couple of planning sessions this week for new projects. The projects are super interesting and I'm looking forward to working with some new team members. One project in particular will see me contributing to some strategy work (which is well timed based on my learning from last week). **I'm very excited!**
 
-<iframe
-  width="480"
-  height="269"
-  frameborder="0"
-  allowfullscreen
-  scrolling="no"
-  allowtransparency
-  src="https://giphy.com/embed/3vdDtr9XfRe3m2MWVP"
-  className="is-pulled-right mr-4"
-></iframe>
+<img
+  src="../images/post-images/queer-eye.gif"
+  className="medium-post-image mb-3 ml-3 is-pulled-right"
+  title="yass queen!"
+/>
 
 **Being social...** The week also included a nice breakfast catch-up with an old FG friend, a pint or 3 with [Jan](https://twitter.com/Jottblum) on Wednesday night and some team food and drinks to mark an important milestone on a critical project on Thursday. Probably a more boozy week than it should be? Yes. #notsorry
 
