--- a/src/posts/wk3-dear-diary.mdx
+++ b/src/posts/wk3-dear-diary.mdx
@@ -61,7 +61,7 @@ Another reasonably early start to pack up by bag and head to the office to grab 
 
 <img
   src="../images/post-images/monkey.gif"
-  className="medium-post-image mb-3 mr-3 is-pulled-left"
+  className="medium-post-image mb-3 mr-3 is-pulled-left rounded-corners"
   title="computer says no"
 />
 
