--- a/src/posts/wk2-how-high.mdx
+++ b/src/posts/wk2-how-high.mdx
@@ -21,7 +21,7 @@ I've been reflecting on the factors that got me both beyond my comfort zone and 
   alt="team mackenzie on the high ropes"
   title="on the ropes"
   image={getImage(props.frontmatter.postImages[0])}
-  className="mb-4"
+  className="mb-4 rounded-corners"
 />
 
 Here's what I noted...
@@ -49,7 +49,7 @@ I like to think there is plenty above I already bring into my work practice but 
 
 <img
   src="../images/post-images/queer-eye.gif"
-  className="medium-post-image mb-3 ml-3 is-pulled-right"
+  className="medium-post-image mb-3 ml-3 is-pulled-right rounded-corners"
   title="yass queen!"
 />
 
