--- a/src/posts/fresh-paint.mdx
+++ b/src/posts/fresh-paint.mdx
@@ -10,7 +10,7 @@ postImages:
 
 import { getImage, GatsbyImage } from 'gatsby-plugin-image'
 
-<div className="medium-post-image">
+<div className="is-gi-medium">
   <GatsbyImage
     alt="lots of colourful spray cans"
     title="all the colours of fresh paint"
