some responsive styles

--- a/src/posts/wk1-be-more-like-robbie.mdx
+++ b/src/posts/wk1-be-more-like-robbie.mdx
@@ -9,7 +9,7 @@ postImages:
 
 <img
   src="../images/post-images/kermit.gif"
-  className="medium-post-image mb-3 ml-3 is-pulled-right rounded-corners"
+  className="imageRight"
   title="kermit types fast"
 />
 
@@ -35,7 +35,7 @@ This weeks assignment had me visualising data to tell a story around some Fire S
 
 <img
   src="../images/post-images/data.gif"
-  className="small-post-image mb-3 ml-3 is-pulled-right rounded corners"
+  className="imageLeft"
   title="multi-tasking"
 />
 
