--- a/src/posts/wk2-how-high.mdx
+++ b/src/posts/wk2-how-high.mdx
@@ -49,7 +49,7 @@ I like to think there is plenty above I already bring into my work practice but 
 
 <img
   src="../images/post-images/queer-eye.gif"
-  className="medium-post-image mb-3 ml-3 is-pulled-right rounded-corners"
+  className="imageRight"
   title="yass queen!"
 />
 
