update all image styles in posts

--- a/src/posts/6-month-reflection.mdx
+++ b/src/posts/6-month-reflection.mdx
@@ -20,7 +20,7 @@ have some actions coming out of such a review so smiles all round!
 <GatsbyImage
   alt="A big mountain!"
   image={getImage(props.frontmatter.postImages[0])}
-  className="mb-4"
+  className="imageFull"
 />
 
 One thing to reflect on is the shape of the review itself, it’s typical of the way
