--- a/src/posts/choropleth-experiments.mdx
+++ b/src/posts/choropleth-experiments.mdx
@@ -19,7 +19,7 @@ It's a pretty throw-away experiment and I put my hands up to having done no anal
   alt="what my map experiment looked like"
   title="this is how my map looked"
   image={getImage(props.frontmatter.postImages[0])}
-  className="mb-4 ml-6 is-pulled-right"
+  className="imageRight"
 />
 
 I've used a combination of [leaflet js](https://leafletjs.com/) and [mapbox](https://www.mapbox.com/) for the presentation and interactivity. [This tutorial on the leaflet site](https://leafletjs.com/examples/choropleth/) was super helpful in getting me started.
