--- a/src/posts/homesick.mdx
+++ b/src/posts/homesick.mdx
@@ -23,5 +23,5 @@ x o x
   alt="One man and his island!"
   title="One man and his island!"
   image={getImage(props.frontmatter.postImages[0])}
-  className="mb-4"
+  className="imageFull"
 />
