--- a/src/posts/lets-keep-talking-about-this.mdx
+++ b/src/posts/lets-keep-talking-about-this.mdx
@@ -22,5 +22,5 @@ Normal cheery Instagram activity of me battling public transport resumes tomorro
   alt="for Morgan and bethany"
   title="for Morgan and Bethany"
   image={getImage(props.frontmatter.postImages[0])}
-  className="mb-4 rounded-corners"
+  className="imageFull"
 />
