--- a/src/posts/localgovcamp-2017.mdx
+++ b/src/posts/localgovcamp-2017.mdx
@@ -20,7 +20,7 @@ Having worked in local government before joining FutureGov, I’d heard of the e
   alt="LocalGovCamp promo pic"
   title="LocalGovCamp promo pic"
   image={getImage(props.frontmatter.postImages[0])}
-  className="mb-4"
+  className="imageFull"
 />
 
 ## Friday Fringe
@@ -40,7 +40,7 @@ After the late morning break, Matt and I were grabbed for an impromptu video int
   height="540"
   frameborder="0"
   src="https://www.instagram.com/p/BZD6NDLlNKv/embed"
-  className="mr-4 is-pulled-left"
+  className="imageRight"
 ></iframe>
 
 ## Digital Maturity
