--- a/src/posts/tinkering-monday.mdx
+++ b/src/posts/tinkering-monday.mdx
@@ -16,7 +16,7 @@ Publishing my first set of [weeknotes on Friday](http://words.lostinthe.uk/weekn
   alt="toy robot"
   title="toy robot"
   image={getImage(props.frontmatter.postImages[0])}
-  className="mb-4"
+  className="imageFull"
 />
 
 Today I decided to revisit the [Ghost blogging platform](https://ghost.org/). I had tried it out some time back but had a few issues migrating an image heavy wordpress site and ultimately ended up moving on. Since that time I've also played with a few [static](https://gohugo.io/) [site](https://jekyllrb.com/) [generators](https://www.gatsbyjs.org/) and wrap around content editing tools like [forestry.io](https://forestry.io/) and although these are amazing I then found I was spending too much time tinkering and not enough time writing. I'm hoping Ghost will give me something in between. Ghost can also be used in [headless configurations](https://blog.ghost.org/jamstack/) so if I ever decide to explore that route, it isn't closed to me.
