--- a/src/posts/what-makes-a-great-retrospective.mdx
+++ b/src/posts/what-makes-a-great-retrospective.mdx
@@ -16,7 +16,7 @@ import { getImage, GatsbyImage } from 'gatsby-plugin-image'
   alt="avengers assemble movie poster"
   title="avengers assemble -  and please bring sharpies"
   image={getImage(props.frontmatter.postImages[0])}
-  className="mb-4"
+  className="imageFull"
 />
 
 As a delivery manager running agile projects, my favourite tool in the agile arsenal is the [retrospective](http://searchsoftwarequality.techtarget.com/definition/Agile-retrospective). Having come from a background where waterfall projects reigned supreme I really appreciate how valuable having regular structured conversations with teams around improving delivery and team dynamics can be. Especially in comparison to the seldom completed and often ignored ‘lessons learned’ logs of old.
