--- a/src/posts/wk2-how-high.mdx
+++ b/src/posts/wk2-how-high.mdx
@@ -21,7 +21,7 @@ I've been reflecting on the factors that got me both beyond my comfort zone and 
   alt="team mackenzie on the high ropes"
   title="on the ropes"
   image={getImage(props.frontmatter.postImages[0])}
-  className="mb-4 rounded-corners"
+  className="imageFull"
 />
 
 Here's what I noted...
