--- a/src/posts/wk6-range.mdx
+++ b/src/posts/wk6-range.mdx
@@ -25,7 +25,7 @@ In addition to doing a great job of re-stocking my sticker collection this week 
   alt="only in hackney"
   title="only in hackney"
   image={getImage(props.frontmatter.postImages[0])}
-  className="imageLeft"
+  className="imageFull"
 />
 
 ### Top tunes...
