adding some more drafts

--- a/src/drafts/taking-stock.mdx
+++ b/src/drafts/taking-stock.mdx
@@ -1,7 +1,7 @@
 ---
-title: Back and forward
-date: 2022-03-17
-tags: ['parkrun', 'work', 'family', 'podcasting']
+title: Taking stock
+date:
+tags: ['life', 'work', 'family']
 socialImage: '../images/post-images/parkrun1.jpg'
 postImages:
   - '../images/post-images/parkrun1.jpg'
