--- a/src/posts/choropleth-experiments.mdx
+++ b/src/posts/choropleth-experiments.mdx
@@ -2,7 +2,7 @@
 title: Choropleth Experiments
 date: 2019-04-25
 description: "One man's experiments in data, maps and the world wide web."
-tags: ['data', 'maps', 'tech', 'code', 'experiments']
+tags: ['dataviz', 'maps', 'tech', 'code', 'experiments']
 socialImage: '../images/post-images/social/map-experiment_social.jpg'
 postImages:
   - '../images/post-images/map-experiment.jpg'
