--- a/src/drafts/making-maps.mdx
+++ b/src/drafts/making-maps.mdx
@@ -1,6 +1,6 @@
 ---
 title: Making Maps
-date:
+date: 2022-03-19
 tags: ['experiments', 'tech', 'dataviz', 'maps']
 socialImage: '../images/post-images/parkrun1.jpg'
 postImages:
@@ -10,8 +10,18 @@ postImages:
 ---
 
 import { getImage, GatsbyImage } from 'gatsby-plugin-image'
+import Barchart from '../components/charts/barchart'
+import Linechart from '../components/charts/linechart'
 
-I took the role of 'master of ceremonies' at a recent full FG team meeting and started by sharing some key messages from the management team. One of these went along the lines of 'Hey February is shaping up to be pretty dang BUSY! let's have each others backs, look after yourselves, think ahead/anticipate, communicate...' etc etc. This week I'm finishing with my own words echoing around in my brain. Just like buses - tasks, challenges and opportunities can arrive all at once and sometimes without much warning. It's been great to see the whole team rise to the challenge.
+I took the role of 'master of ceremonies' at a recent full FG team meeting and started by sharing some key messages from the management team. One of these went along the lines of 'Hey February is shaping up to be pretty dang BUSY! let's have each others backs, look after yourselves, think ahead/anticipate, communicate...' etc etc.
+
+<Linechart />
+
+This week I'm finishing with my own words echoing around in my brain. Just like buses - tasks, challenges and opportunities can arrive all at once and sometimes without much warning. It's been great to see the whole team rise to the challenge.
+
+<Barchart />
+
+I've definitely felt things step up a gear. The mental load of constantly re-prioritising, communicating and navigating complexity across multiple contexts has felt a little tiring. As much as it's felt tough my workload has involved an interesting mix of contributing to work in the here and now but also laying groundwork and putting plans in place that will have longer term impact and benefit. In the few moments where I've paused there is a lot of great work we can be excited and proud of.
 
 <GatsbyImage
   alt="3.2.1 GO"
@@ -19,13 +29,6 @@ I took the role of 'master of ceremonies' at a recent full FG team meeting and s
   image={getImage(props.frontmatter.postImages[1])}
   className="imageRight"
 />
-
-I've definitely felt things step up a gear. The mental load of constantly re-prioritising,
-communicating and navigating complexity across multiple contexts has felt a little
-tiring. As much as it's felt tough my workload has involved an interesting mix of
-contributing to work in the here and now but also laying groundwork and putting plans
-in place that will have longer term impact and benefit. In the few moments where
-I've paused there is a lot of great work we can be excited and proud of.
 
 There have though been a couple of situations where in reflection I could/should have acted differently or done better. I feel I may have let a couple of people down. Annoyingly I still haven't mastered not being too harsh on myself when I make these mistakes. I need to build in better ways to test whether this is just me not meeting my own high expectations or if this is also other people's perceptions of these events. I plan to loop back around next week with those I fear I may have annoyed to test this out. Regardless of this I made it through a busy week largely with my mind and body in tact - I'm very thankful for colleagues who have had my back, rallied with support when I've asked for it, been flexible, understanding and patient. My backlog for next week still feels challenging so the priority for the weekend is resting up & recharging.
 
