remove draft post

--- a/src/drafts/TGF-data-dive.mdx
+++ b/src/drafts/TGF-data-dive.mdx
@@ -35,7 +35,7 @@ In terms of creating the graphs included on this page I've used a react library 
 
 Over our 20 events we've had people run, jog or walk our 5km course 5355 times. Added up our participants have covered an incredible **26,675km**! Which is not far from 67% of the distance around planet earth (if you follow the eqautor). Given our attendance average is about 266 runners (1,330km per week) we should complete our trip around the earth by the time we hit our 30th event! 🚀 🌎
 
-Those 5355 finishers actually equate to about **1852 real human beings** attending our event at the Great Field. I say 'about' as within our result set we have 288 unknowns. This could be made up of real people who've forgotten to bring a barcode, maybe never registered or a results error caused during timekeeping, token sorting etc. We also know that every week we have an amount of small people safely wrapped up in running buggies that won't be included in our results (the TGF parkrun next generation). To put this number in perspecitve our 1852 particpants would fill just over **14 London buses** to the brim (with 80 people seated and 50 people standing). This analysis also doesn't include our 4-legged friends 🐩 - I have no data for this but I think it'd be sensible for us to include 1 more buses for good measure.
+Those 5355 finishers actually equate to about **1852 real human beings** attending our event at the Great Field. I say 'about' as within our result set we have 288 unknowns. This could be made up of real people who've forgotten to bring a barcode, maybe never registered or a results error caused during timekeeping, token sorting etc. We also know that every week we have an amount of small people safely wrapped up in running buggies that won't be included in our results (the TGF parkrun next generation). To put this number in perspecitve our 1852 particpants would fill just over **14 London buses** to the brim (with 80 people seated and 50 people standing). This analysis also doesn't include our 4-legged friends 🐩 - I have no data for this but I think it'd be sensible for us to include 1 more bus for good measure.
 
 <GatsbyImage
   alt="14 buses plus one for the hounds"
