--- a/src/drafts/TGF-data-dive.mdx
+++ b/src/drafts/TGF-data-dive.mdx
@@ -4,7 +4,7 @@ date: 2022-03-19
 tags: ['experiments', 'tech', 'dataviz', 'parkrun']
 socialImage: '../images/post-images/parkrun1.jpg'
 postImages:
-  - '../images/post-images/tgf-buses.jpg'
+  - '../images/post-images/tgf_buses.jpg'
   - '../images/post-images/parkrun2.jpg'
   - '../images/post-images/parkrun3.jpg'
 ---
@@ -12,10 +12,11 @@ postImages:
 import { getImage, GatsbyImage } from 'gatsby-plugin-image'
 import Barchart from '../components/charts/barchart'
 import Linechart from '../components/charts/linechart'
+import Doughnutchart from '../components/charts/doughnutchart'
 
 The folks who follow [me on twitter](https://twitter.com/_disco) will have possibly noticed that parkrun has become a bit of an obsession for me lately. There are a few reasons for this which I'm sure i'll write about another day. The short story though is that I'm currently loving it and in my spare time I volunteer as part of the core event team for [The Great Field parkrun](https://www.parkrun.org.uk/thegreatfield/) which is conveniently just a few mins walk from my front door in Poundbury, Dorset.
 
-This week I decided it'd be an interesting exercise to pull together some of our event data to see what I could learn about our little community event so far. For context i'm no crack data scientist or analyst but thought it'd be an interesting challenge for me to blow the cobwebs off my limited skills and share some of what I found. If the 'how I did this' bit doesn't interest you feel free to [skip down to the insights](#insights). 🌳❤️
+This week I decided it'd be an interesting exercise to pull together some of our event data to see what I could learn about our little community events. For context i'm no crack data scientist or analyst but thought it'd be an interesting challenge for me to blow the cobwebs off my limited skills and share some of what I found out. If the 'how I did this' bit doesn't interest you feel free to [skip down to the insights](#insights). 🌳❤️
 
 ## Method
 
@@ -23,32 +24,49 @@ Glancing through the the stats on the parkrun website confirmed by suspcisions t
 
 The parkrun tech fairies do an amazing job of making sure results from every event across the globe are published in table form on the website every week and I started by just copying and pasting these into google sheets. It soon became a chore to try and tidy up and clean the HTML elements to get things in the right place and it certainly didn't feel something I'd want to repeat very often.
 
-Some basic research around available [parkrun APIs](https://developer.parkrun.com/) were a bit hit and miss. Plans for anything official look like they had been shelved a while back (which is sad but also understandable). The nerdier elements of the parkrun community (there are lots of us) have seemingly tried to fill these gaps over time by creating many things in this space but many were outdated, poorly documented. [Some seem promising](https://parkrun.js.org/index.html) but added more complexity than I wanted to consider right now.
+Some basic research around available [parkrun APIs](https://developer.parkrun.com/) were a bit hit and miss. Plans for anything official look like they had been shelved a while back (which is sad but also understandable). The nerdier elements of the parkrun community (there are lots of us) have seemingly tried to fill these gaps over time by creating many things in this space but many were outdated, poorly documented. [Some seem promising](https://parkrun.js.org/index.html) but look like they'd add more complexity than I wanted to tackle right now.
 
 I decided a suitable compromise would be to use my web browser to [save local copies](https://www.dummies.com/article/technology/internet-basics/how-to-save-a-web-page-in-google-chrome-140687]) of the 20 event results pages into a folder and then create a script to make the process of extracting the data and adding it to a single spreadsheet friendly file of comma seperated values(csv) a little less tedious. I will keep looking into some of these other aproaches/tools though as there are limits baked into the results pages that are I'd like to explore (like knowing more about volunteers on the day, and knowing an athletes 'home' parkrun).
 
-Given I am not a developer and that I've never done this before the process of creating the script involved more than a little bit of trial and error, lots of googling and some swearing but what I've written works! 🎉 The resulting script means I can now easily append my dataset with new results every week with a couple of clicks. I could likely also automate this part of the process but that's an experiment for another day. The script itself with a short README file is [available on github](https://github.com/d1sc0/tgf-parkrun-stats) if you have [node](https://nodejs.org/en/) running on your computer, delight in hacking things together and want to achieve something similar. For any readers who can write code properly, please be kind - I was born before the internet!
+Given I am not a developer and that I've never done this before the process of creating the script involved more than a little bit of trial and error, lots of googling and some swearing but what I've written works! 🎉 The resulting script means I can now easily append my dataset with new results every week with a couple of clicks. I could likely also automate this part of the process but that's an experiment for another day. The script I created along with a short README file is [available on github](https://github.com/d1sc0/tgf-parkrun-stats) if you delight in hacking things together, have [node](https://nodejs.org/en/) running on your computer and want to achieve something similar. For any readers who can write code properly, please be kind - I was born before the internet!
 
-In terms of creating the graphs included on this page I've used a react library called [react-chartjs-2](https://www.npmjs.com/package/react-chartjs-2) to present the data as chart components embedded into this [mdx](https://mdxjs.com/) formatted post on my [Gatsby blog](https://www.gatsbyjs.com/). Screenshots of graphs from the spreadsheet would have also been fine...but far less satisfying for my inner geek.
+In terms of creating the couple of graphs included on this page I've used a react library called [react-chartjs-2](https://www.npmjs.com/package/react-chartjs-2) to present the data as chart components embedded into this [mdx](https://mdxjs.com/) formatted post on my [Gatsby blog](https://www.gatsbyjs.com/). Screenshots of graphs from the spreadsheet would have also been fine...but far less satisfying for my inner geek.
 
 ## Insights <a id="insights"></a>
 
-Over our 20 events we've had people run, jog or walk our 5km course 5355 times. Added up our participants have covered an incredible **26,675km**! Which is not far from 67% of the distance around planet earth (if you follow the eqautor). Given our attendance average is about 266 runners (1,330km per week) we should complete our trip around the earth by the time we hit our 30th event! 🚀 🌎
+Over our 20 events we've had people run, jog or walk our 5km course **5355 times**. Added up our participants have covered an incredible **26,675km**! Which is not far from 67% of the distance around planet earth (if you follow the equator). Given our attendance average is about 266 runners (1,330km per week) we should complete our first collaborative trip around the earth by the time we hit our 30th event! 🚀 🌎
 
-Those 5355 finishers actually equate to about **1852 real human beings** attending our event at the Great Field. I say 'about' as within our result set we have 288 unknowns. This could be made up of real people who've forgotten to bring a barcode, maybe never registered or a results error caused during timekeeping, token sorting etc. We also know that every week we have an amount of small people safely wrapped up in running buggies that won't be included in our results (the TGF parkrun next generation). To put this number in perspecitve our 1852 particpants would fill just over **14 London buses** to the brim (with 80 people seated and 50 people standing). This analysis also doesn't include our 4-legged friends 🐩 - I have no data for this but I think it'd be sensible for us to include 1 more bus for good measure.
+Those 5355 finishers actually equate to approximately **1852 individual athletes** crossing the line at our event on the Great Field. I say 'approximately' as within the result set we have 288 unknowns. This is likely made up of people who've forgotten to bring a barcode, maybe never registered or could be the result of an error caused during timekeeping, token sorting etc. Another known group missing from these numbers is those lucky small people safely wrapped up in running buggies being pushed around our course by adults far fitter than me (the TGF parkrun next generation maybe?! 🖖).
 
 <GatsbyImage
-  alt="14 buses plus one for the hounds"
+  alt="14 buses plus one for the doggies"
   title="14 buses plus one for the doggies"
   image={getImage(props.frontmatter.postImages[0])}
-  className="imageFull"
+  className="imageRight"
 />
 
-### 20 event summary (numbers, particpants, stalwarts, distance covered)
+### Participation
+
+To put this number of participants in perspecitve - 1852 people would fill just over **14 London buses** to capacity (with 80 people seated and 50 people standing on each bus). This analysis also doesn't include our 4-legged friends 🐩 or TGF Next Generation™ so I suggest we round up to at least 15 buses if we decide to take everybody out for a picnic!
+
+A stat that suprised me a little was that out of those 1852 folks, **831 (44.87%)** have taken part at our event only once. Being a new event we've had lots of support & interest from regular attendees from other local established parkrun events plus quite a few tourists from further afield. This trend itself is a positive one that I'm sure will only continue with [rave reviews like this one](https://www.youtube.com/watch?v=OKiYqjq4oew&t=462s).
+
+Getting the word out to people who've never heard of parkrun or haven't heard we now have an event in Dorchester will likley take a little more time, patience and work from the events team and community. It's a metric I'm keenly interested in tracking closely - I hope our little parkrun provides an opportunity to build and strengthen our local community whilst also promoting improved physical and mental health outcomes. The more regular attendees we have the bigger the potential impact (because people don't often return to events they don't get value from). This is another reason why I'm keen to tinker some more with the stats and find easier ways to guage how many athletes list us as their 'home' event.
+
+I won't share names in this post but I can tell you we have **4 individuals who've crossed the line at all 20 events** at the Great Field. Two of those 4 (according to their parkrun profiles) were new to parkrun and have so far (in terms of parkrun attendance) only ever run with us, which is a most impressive streak indeed! ♥️
 
 <Linechart />
+So far attendance has only dipped once below 200.{' '}
+
+Rather than list out the number of athletes by age categories here I thought I'd turn to the dark side (marketing) and roughly show how our attendees break down by [generational groups](https://www.mentalfloss.com/article/609811/age-ranges-millennials-and-generation-z). Doing this actually helps me iron out/hide another interesting kink in the stats. When I total up the number athletes against the athletic categories used by parkrun - I'm out by a total of 32! I scratched my head for a while before noticing that 32 attendees in the last 20 events have had a birthday which has seen you listed in more than one age category. Many happy returns!! 🎂
+
+<Doughnutchart chartClass="imageLeft" />
+
+Once again this won't be super accurate as I don't have people's actual birthdays and the generational groups won't perfectly align to the boundaries of parkrun age categories but it hints at the general shape of age groups attending our event. Clearly my fellow **Generation X'ers are as keen on parkrun as I am being our largest group and making up 37.2% of our athletes**. We have 86 young athletes in our Generation Alpha group. It'll be interesting to see if this continues to grow as part of family groups attending on a regular basis or whether it's a bit of a blip caused by event number 15 where young people from Dorchester Middle School joined us to raise money and awareness for Mental Health Causes. You can clearly see the spike this caused on the line chart further up this post.
 
 ### Attendance (distribution age, sex, clubs)
+
+<Linechart />
 
 ### Times/performance (fastest, slowest, average times over events, distribution of runners by 5 min chunks? number of walkers)
 
