update draft posts

--- a/src/drafts/TGF-data-dive.mdx
+++ b/src/drafts/TGF-data-dive.mdx
@@ -56,7 +56,7 @@ Getting the word out to people who've never heard of parkrun or haven't heard we
 I won't share names in this post but I can tell you we have **4 individuals who've crossed the line at all 20 events** at the Great Field. Two of those 4 (according to their parkrun profiles) were new to parkrun and have so far (in terms of parkrun attendance) only ever run with us, which is a most impressive streak indeed! ♥️
 
 <Linechart />
-So far attendance has only dipped once below 200.{' '}
+So far attendance has only dipped once below 200.
 
 Rather than list out the number of athletes by age categories here I thought I'd turn to the dark side (marketing) and roughly show how our attendees break down by [generational groups](https://www.mentalfloss.com/article/609811/age-ranges-millennials-and-generation-z). Doing this actually helps me iron out/hide another interesting kink in the stats. When I total up the number athletes against the athletic categories used by parkrun - I'm out by a total of 32! I scratched my head for a while before noticing that 32 attendees in the last 20 events have had a birthday which has seen you listed in more than one age category. Many happy returns!! 🎂
 
